maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: not found: value estSurbiscuit
while (!estSurbiscuit)
        ^