maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall() 
			{
while (!estSurbiscuit)
{		
while (!estFaceMur)
	{
	avance();
	}
while (estFaceMur)
gauche();
}
			}